--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         Header
     -->
     <h1>Rebekah Myrick</h1>
-   
-    <a href="www.linkedin.com/in/rebekah-downer"><h4>Linkedin.com</h4></a><h4> ~ </h4><a href="mailto:rebekahgmyrick@lewisu.edu"><h4>rebekahgmyrick@lewis.edu</h4></a><h4> ~ </h4><h4>Romeoville, IL ~ </h4><h4>630-770-6845</h4>
-    
+<div style="text-align:center">
+    <a href="www.linkedin.com/in/rebekah-downer"><h4>LinkedIn</h4></a><h4> - </h4><a href="mailto:rebekahgmyrick@lewisu.edu"><h4>rebekahgmyrick@lewis.edu</h4></a><h4> - </h4><h4>Romeoville, IL</h4><h4> - </h4><h4>630-770-6845</h4>
+</div>    
   
     <h2>SUMMARY OF QUALIFICATIONS</h2>
     
