--- a/index.html
+++ b/index.html
@@ -16,85 +16,120 @@
 
     <!--Links and number-->
 <div style="text-align:center">
-    <a href="www.linkedin.com/in/rebekah-downer"><h4>LinkedIn</h4></a><h4> - </h4><a href="mailto:rebekahgmyrick@lewisu.edu"><h4>rebekahgmyrick@lewis.edu</h4></a><h4> - </h4><h4>Romeoville, IL</h4><h4> - </h4><h4>630-770-6845</h4>
+    <a href="www.linkedin.com/in/rebekah-downer"><h4>LinkedIn</h4></a><h4> - </h4><a href="mailto:rebekah.downer@gmail.com"><h4>rebekah.downer@gmail.com</h4></a><h4> - </h4><h4>Chicago, IL</h4><h4> - </h4><h4>630-770-6845</h4>
 </div>  
 
     <!--Body with sections-->
     <!--section 1-->
-    <h2>SUMMARY OF QUALIFICATIONS</h2>
+    <h2>HIGHLIGHTS OF QUALIFICATIONS</h2>
     
-    <p>Recruitment/Training: Recruited and trained new employees; conducted new-hire programming</p>
-    <p>Customer Service: Over 2 years of experience assisting customers, problem-solving, and resolving escalated issues</p>
-    <p>Communication: Interpersonal, collaboration, and presentation skills with people of diverse backgrounds </p>
-    <p>Leadership: Trained employees, and served as supervisor in several job roles</p>
-    <p>Research: Skilled in gathering and analyzing internal/external data in a variety of environments</p>
+    <p>Proficient in multiple programming languages, including Java, Python, C++, and Ruby, with experience developing both back-end and front-end systems.</p>
+    <p>Proficient in database design and management, with experience in SQL and NoSQL databases, data visualization, and data analysis.</p>
+    <p>Experienced in web development, including HTML, CSS, JavaScript, React, with a focus on creating responsive and user-friendly interfaces. </p>
+    <p>Able to analyze complex problems and develop effective solutions using a combination of critical thinking and technical skills.</p>
+    <p>Able to effectively communicate technical concepts to non-technical clients, work collaboratively with teams, and manage projects.</p>
+    <p>A deep understanding of algorithms, data structures, operating systems, and software development methodologies.</p>
+    <p>Familiar with cloud computing concepts and experience with cloud platforms like AWS, Azure, and GCP.</p>
+    <p>Demonstrated a passion for learning new technologies and programming languages, with a commitment to staying up-to-date with industry trends and best practices.</p>
 
     <!--section 2-->
-    <h2>COMPUTER SKILLS</h2>
-    <h3>Operating Systems:</h3>
+    <h2>SKILLS</h2>
+    <h3>Proficient:</h3>
     <ul>
-        <li>Windows, Linux, Mac OSX, IOS, Android, Chrome OS</li>
+        <li>Java, Python, C++, C#, Lua, HTML, CSS, Javascript, SQL, MongoDB, Git, Oracle, Word, Excel, .NET</li>
     </ul>
-    <h3>Networking:</h3>
+    <h3>Familiar:</h3>
     <ul>
-        <li>LAN</li>
+        <li>C, PHP, Ruby, Assembly, OS, Ajax, Wordpress, Node.js, Rails</li>
     </ul>
-    <h3>Languages:</h3>
+    <h3>Beginner:</h3>
     <ul>
-        <li>C, C++, C#, Java, Python, JavaScript, Lua, Papyrus</li>
-    </ul>
-    <h3>Web:</h3>
-    <ul>
-        <li>HTML, HTML5, CSS, Wordpress, JavaScript, Node.js</li>
-    </ul>
-    <h3>Applications:</h3>
-    <ul>
-        <li>Microsoft Office, Photoshop, 3DStudio Max, Blender, Google Docs</li>
+        <li>Hadoop, Perl, Powershell, JSON</li>
     </ul>
 
     <!--section 3-->
     <h2>EDUCATION</h2>
-    <h5>Bachelor of Science in Computer Science</h5>
-    <h5>The College of Aviation, Science and Technology</h5>
-    <p>Lewis University, Romeoville, IL</p>
-    <p>Expected Graduation: June 2023</p>
+    <h5>Bachelor of Science (B.S.) in Computer Science</h5>
+    <h5>Lewis University, Romeoville, IL</h5>
+    <p>August 2021-December 2023</p>
     <p>GPA: 3.5</p>
+    <ul>
+        <li>Relevant Coursework: Object-Oriented Programming, Intro to Networks, Computer Organization, Algorithms and Data Structures, Operating Systems, Cybersecurity Essentials, Software Engineering, Programming Languages, Theory of Algorithms and Computation, Machine Learning, .NET Programming, Web and Distributed Programming, Database Systems</li>
+    </ul>
 
+    <h5>Bachelor of Science (B.S.) in Computer Science</h5>
+    <h5>Sam Houston State University, Hunstsville, TX</h5>
+    <p>August 2019-May 2021</p>
+
+    
     <!--section 4-->
     <h2>WORK EXPERIENCE</h2>
-    <h5>Sales Representative</h5>
+    <h5>Shift Lead</h5>
     <p>Once Upon a Child, Crest Hill, IL</p>
-    <p>July 2021 – May 2022</p>
+    <p>August 2021 – Present</p>
     <ul>
-        <li>Train 2 – 4 new employees each month on company policies, upselling, and report writing </li>
-        <li>Assist diverse array of customers with their selections and purchases</li>
-        <li>Process 50+ cash and credit transactions daily; balance cash drawer</li>
-        <li>Resolve customer complaints to ensure satisfaction and promote repeat business</li>
+        <li>Managed the checkout process and efficiently entered products into the inventory system</li>
+        <li>Distinguished myself by taking ownership of inventory management</li>
+        <li>Consistently achieved outstanding sales performance, surpassing monthly targets</li>
+        <li>Received commendations for my fast-paced work ethic and exceptional organizational skills</li>
     </ul>
     <h5>Lab Assistant</h5>
-    <p>Geography and Environmental Sciences Department, Sam Houston State University, Huntsville, TX</p>
+    <p>Computer Sciences and Engineering Department, Sam Houston State University, Huntsville, TX</p>
     <p>January 2020 – May 2021</p>
     <ul>
-        <li>Answering student questions and helping them solve problems. </li>
-        <li>Guiding students through problem solving solutions and helping with homework.</li>
-        <li>Grading lab assignments, homework, and quizzes. Making sure students followed department policies. </li>
-        <li>Organizing exercises and lab projects according to lab instructor’s specifications. </li>
+        <li>Assisted the computer science professor in preparing and organizing instructional materials</li>
+        <li>Provided technical support during class sessions, helping students with coding and software tasks</li>
+        <li>Monitored students' progress and offered assistance as needed during lab exercises and assignments.</li>
+        <li>Ensured the computer lab was set up with all necessary equipment and software for each class.</li>
     </ul>
 
     <!--section 5-->
+    <h2>PROJECTS</h2>
+    <h5>My Books Application: Senior Project</h5>
+    <h5>Fantasy Basketball Project: Personal Project</h5>
+    <ul>
+        <li>With the increasing popularity of fantasy sports, employing machine learning to determine a team’s likelihood of winning a game and predict a player’s fantasy point score can significantly enhance a user’s fantasy sports experience.         </li>
+        <li>To predict the winning team, we will leverage features like the home team's home record and the away team's road record. This classification helps users make informed decisions while picking a team to win a game. To achieve the most accurate model, we will rapidly iterate through various models and features, identifying the ones with the most robust predictive power. We are currently employing the K-Nearest Neighbors algorithm, but we will also consider other models such as Support Vector Machines, Naïve Bayes, and logistic regression, assessing their effectiveness through feature addition or removal.         </li>
+        <li>In fantasy sports, forecasting a player's fantasy point score holds paramount importance. We will quantify fantasy points using ESPN's standard fantasy points format, associating points with various basketball statistics, such as points scored and rebounds. Our prediction model for a player's fantasy point score incorporates features like the player's average fantasy points over their last 20 games (or less, depending on the total games played), and the average fantasy points per minute the player's opposing team has conceded to the player's position, which we multiply by the player's expected minutes for the upcoming game, calculated based on their average minutes played over the previous two games. While our current model is based on linear regression for its effectiveness and interpretability, we remain open to the potential benefits of utilizing a neural network.         </li>
+        <li>Our dataset was acquired through web scraping from basketballreference.com, using BeautifulSoup from the BS4 Python library. We will preprocess the dataset for machine learning using Pandas, while for our machine learning models, we will leverage the SciKit-Learn library. Should the need for a neural network arise, we will consider employing Keras.         </li>
+    </ul>
+    <h5>Weather App: Class Project</h5>
+    <ul>
+        <li>Developed a weather application that is a user-friendly web-based tool designed to provide accurate and up-to-date weather information for both local and favorite locations. With its intuitive interface and seamless functionality, users can easily search for weather details and save their preferred locations for quick access. </li>
+        <li>The Weather Application is implemented using HTML, CSS, and JavaScript to provide an interactive and dynamic user experience. The HTML structure defines the layout and components, while CSS is utilized to style the application, ensuring an attractive and visually consistent interface. JavaScript handles the application's logic and functionality, including fetching weather data from a weather API, processing user input, and dynamically updating the user interface.</li>
+        <li>The application utilizes AJAX techniques to communicate with the weather API, enabling real-time retrieval of weather information. The API response, typically in JSON format, is parsed and displayed on the user interface dynamically using JavaScript.</li>
+        <li>The application may eventually make use of a backend database to store and retrieve users' favorite locations, ensuring persistent data across sessions.</li>
+    </ul>
+    <h5>Warehouse Employee Actions System: Personal Project</h5>
+    <ul>
+        <li>Created a database system for inputting Employee information and daily dock actions which then outputs Employee quality reports and dock conditions.</li>
+    </ul>
+    <h5>Wondering in The Woods: Class Project</h5>
+    <ul>
+        <li>Wandering in the Woods Simulation is to teach K-8 students about computation, computational thinking, math concepts, and computer science in a fun and engaging way. </li>
+        <li>The simulation/game is divided into three stages, each with increasing levels of complexity, targeting students from grades K-2, 3-5, and 6-8. </li>
+        <li>The simulation aims to provide a consistent user experience across the different stages to facilitate the learning curve and build confidence in students. </li>
+        <li>The simulation/game uses the concept of people being lost in the woods and needing to find each other, represented by a grid. By moving around the grid and finding each other, students will learn about statistics, spatial reasoning, and experimental design, among other concepts. </li>
+        <li>The simulation/game is designed to be played by pairs of students working together in front of the same screen, with audio directions and prompts, and assessments to check how well the students are doing with the challenges.        </li>
+    </ul>
+
+    <!--section 6-->
     <h2>HONORS AND AWARDS</h2>
     <ul>
-        <li>Dean’s List, Sam Houston State University, four semesters</li>
+        <li>Dean’s List, Sam Houston State University, Lewis University</li>
         <li>Alpha Lambda Delta National Honor Society, Sam Houston State University</li>
         <li>Elliott T. Bowers Honors College, Sam Houston State University</li>
     </ul>
 
-    <!--section 6-->
+    <!--section 7-->
     <h2>ACTIVITIES AND VOLUNTEER EXPERIENCE</h2>
     <ul>
-        <li>Member, Society of Women Engineers – Sam Houston State University Chapter, 2019 – Present</li>
+        <li>Member, ACM-W - Lewis University Chapter, 2022 – Present</li>
+        <li>Member, Society of Women Engineers – Sam Houston State University Chapter, 2019 – 2021</li>
         <li>Member, Alpha Lambda Delta – National Honor Society, 2019 – 2020</li>
         <li>Volunteer, Huntsville Senior Living, Art Festival 2020</li>
+        <li>Volunteer, Sam Houston State University Conservation Project, 2019 – 2020</li>
+        <li>Volunteer, Chicagoland Animal Rescue, NFP, 2021 – 2023</li>
     </ul>
 
 
