--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="index.css">
-    <title>Web Resume</title>
+    <title>Resume</title>
 </head>
 <body>
     <!--Header-->
-    <h1>Rebekah Myrick</h1>
+    <h1>Rebekah Downer</h1>
 
     <!--Links and number-->
 <div style="text-align:center">
