--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         
     </break>
     <h5>Shift Lead</h5>
-    <p>Once Upon a Child, Crest Hill, IL</p>
+    <p>Once Upon a Child, Bolingbrook, IL</p>
     <p>August 2021 – Present</p>
     <ul>
         <li>Managed the checkout process and efficiently entered products into the inventory system</li>
